Applying further review suggestion

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -60,7 +60,7 @@
    "id": "5e7893b2-a99c-477c-bade-e15b3af1aa25",
    "metadata": {},
    "source": [
-    "## Initialize the extension\n",
+    "## Initialize the Extension\n",
     "\n",
     "<b>This operation normally takes a considerable amount of time to complete</b>\n",
     "\n",
@@ -92,14 +92,6 @@
     "    !pip install --progress-bar off {wheel_path}\n",
     "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af077fea-54d3-4f43-bfe9-3d2e36eba436",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
