--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
@@ -8,7 +8,7 @@
     "# Text AI Preprocessing\n",
     "\n",
     "\n",
-    "Here we will demonstrate how the Text AI can be used to build a data-preprocessing pipeline. We will be taking a dataset of customer support tickets. This dataset contains unstructured data in the form of ticket descriptions. We will sort these tickets into \"urgent\" and \"not urgent\" cases, and find important named entities and keywords within the text. This will be archived using a Text AI Pipeline.\n",
+    "Here we will demonstrate how the Text AI can be used to build a data-preprocessing workflow. We will be taking a dataset of customer support tickets. This dataset contains unstructured data in the form of ticket descriptions. We will sort these tickets into \"urgent\" and \"not urgent\" cases, and find important named entities and keywords within the text. This will be archived using a Text AI Workflow.\n",
     "\n",
     "We will also demonstrate the Text AI ability to determine if data was already processed, and skip it if applicable.\n",
     "\n",
@@ -38,7 +38,7 @@
     "                                                                                                                                                   \n",
     "Depending on the amount of data/text which should be processed, annotating by hand is mostly not an option these days, since with increasing dataset sizes the resources needed quickly become unrealistic. Therefore, Exasol Text AI provides you with tools you can use for annotating your data in various ways.\n",
     "                                                                                                                     \n",
-    "In this Notebook, we will show you our three default preprocessing pipeline steps. Of course, it is possible for you to define your own pipeline later on.\n",
+    "In this Notebook, we will show you our three default preprocessing workflow steps. Of course, it is possible for you to define your own workflow later on.\n",
     "Let's explain these three steps before we dive into how to run the preprocessing.\n",
     "                                                                                                                     \n",
     "### Topic Classification\n",
@@ -213,7 +213,7 @@
    "source": [
     "### Create a View on the Data\n",
     "\n",
-    "This dataset has ~3600 entries. You could run the preprocessing for the whole dataset, but it would take quite some time. Instead, we will create a view containing only part of the dataset, and use this view as the base for our preprocessing.\n",
+    "This dataset has ~3600 entries. You could run the preprocessing for the whole dataset, but it would take quite some time. Instead, we will create a view containing only a part of the dataset, and use this view as the base for our preprocessing.\n",
     "We set the size of this view here. If you want to see how the AI-Lab handles bigger datasets on your Exasol instance, you can set the `view_size` higher."
    ]
   },
@@ -270,7 +270,7 @@
    "id": "2c3aff79-6dbe-4e4d-a8cc-d4dfcc81753a",
    "metadata": {},
    "source": [
-    "As you can see, we now have only our defined 100 data points to contend with.\n",
+    "As you can see, we now have only our defined 10 data points in the view.\n",
     "\n",
     "Let's now see what our data contains:"
    ]
@@ -310,7 +310,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT TICKET_ID,\n",
+    "SELECT \n",
+    "    TICKET_ID,\n",
     "    CUSTOMER_NAME,\n",
     "    DATE_OF_PURCHASE,\n",
     "    TICKET_SUBJECT, \n",
@@ -326,7 +327,7 @@
    "id": "668de46e",
    "metadata": {},
    "source": [
-    "### Cleaning up Result of previous Runs of the Notebook"
+    "### Cleaning up Results of previous Runs of the Notebook"
    ]
   },
   {
@@ -367,10 +368,10 @@
    "id": "49508a9a",
    "metadata": {},
    "source": [
-    "If you are curious about which tables are generated and how they look, you can find that information in the Results section below.\n",
+    "If you are curious about which tables are generated and how they look, you can find that information in the [Results](#results) section below.\n",
     "Next, define a function which drops these tables. Then we call the function.\n",
     "\n",
-    "**Note:** If you run into technical issues during the running of this notebook, you might want to run the `delete_text_ai_preprocessing_tables` function again, in order to re-run the Pipeline from scratch. This will ensure all data gets processed again."
+    "**Note:** If you run into technical issues during the running of this notebook, you might want to run the `delete_text_ai_preprocessing_tables` function again, in order to re-run the workflow from scratch. This will ensure all data gets processed again."
    ]
   },
   {
@@ -403,27 +404,29 @@
    "source": [
     "## Download NLP Models\n",
     "\n",
-    "We will use multiple different open source transformers models to run our preprocessing with. \n",
+    "We will use multiple different open source Hugging Face Transformers models to run our preprocessing with. \n",
     "* For Named Entity Extraction: [guishe/nuner-v2_fewnerd_fine_super](https://huggingface.co/guishe/nuner-v2_fewnerd_fine_super)\n",
     "* For Topic Classification: [tasksource/ModernBERT-base-nli](https://huggingface.co/tasksource/ModernBERT-base-nli)\n",
     "* For Keyword Extraction: [answerdotai/ModernBERT-base](https://huggingface.co/answerdotai/ModernBERT-base)\n",
     "\n",
-    "We will use [this notebook](./utils/txaie_default_models.ipynb) to download them from HuggingFace.\n",
+    "These models were already installed during the [intialization](txaie_init.ipynb) of Text AI.\n",
     "\n",
-    "Simply run the next cell.\n",
-    "**This call will take some time to complete, depending on your internet connection. You will see some printed output once it is done.**\n",
+    "You can download your own models as follows:\n",
     "\n",
-    "**Note**: If this operation fails with an error indicating a lost connection, please increase the size of your database and try again. The models are each around 1-2 GB in size and also need that much main memory on each node of your Database."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24998ddf13fb8baf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run ./utils/txaie_default_models.ipynb"
+    "```python\n",
+    "from exasol.nb_connector.text_ai_extension_wrapper \n",
+    "import install_model, TransformerModel\n",
+    "\n",
+    "install_model(conf,TransformerModel(\n",
+    "    \"your keyword search model\", \n",
+    "    \"feature-extraction\", AutoModel))\n",
+    "install_model(conf,TransformerModel(\n",
+    "    \"your named entity model\", \n",
+    "    \"token-classification\", AutoModelForTokenClassification))\n",
+    "install_model(conf,TransformerModel(\n",
+    "    \"your zero-shot classification model\",\n",
+    "    \"zero-shot-classification\", AutoModelForSequenceClassification))\n",
+    "```"
    ]
   },
   {
@@ -431,16 +434,15 @@
    "id": "77e177878abf872c",
    "metadata": {},
    "source": [
-    "## Configure the Text AI Pipeline\n",
+    "## Configure the Text AI Workflow\n",
     "\n",
-    "In Text AI, you define steps to run, and then place them in a Pipeline which orchestrates the data flow for you. In this Notebook we will be using a basic example using the default steps defined in the `StandardExtractor`.\n",
-    "                                                                                                                    \n",
+    "The Text-AI-Extension allows you to configure a data processing workflow. In this Notebook we will be using a basic example where the workflow is defined by a so called `StandardExtractor`.                                                                                                                    \n",
     "#### Configure Default Values\n",
     "\n",
-    "Here, we will configure how our pipeline should run. In general, each NLP extractor has its own configuration parameters. The `Defaults` object is a helper object allowing us to set these parameters once and apply these settings to all extractors.\n",
+    "Here, we will configure how our workflow should run. In general, each NLP extractor has its own configuration parameters. The `Defaults` object is a helper object allowing us to set these parameters once and apply these settings to all extractors.\n",
     "\n",
-    "How you need to set these defaults will depend on your Database. This demonstration should work on a rather small Docker-DB. Therefore, we set the `batch_size` to only 10, so only 10 rows will be processed at once per process, and also our `parallelism_per_node` is set to the low value of 1. `parallelism_per_node` determines how many parallel processes are run on each node of you database. If you have a bigger Database to run this Notebook on, you can play around with setting both values higher than we have here.\n",
-    "The model repository is a data object pointing to the location of the model files we downloaded earlier.\n"
+    "How you need to set these defaults will depend on your Database. This demonstration should work on a rather small Docker-DB. Therefore, we set the `batch_size` to only 10, so only 10 rows will be processed at once in each UDF instance, and also our `parallelism_per_node` is set to the low value of 1. `parallelism_per_node` determines how many parallel UDF instances are run on each node of your database. If you have a bigger Database to run this Notebook on, you can try to increase both values.\n",
+    "The model repository is a data object pointing to the location of the model files we during the extension initailization or the previous step.\n"
    ]
   },
   {
@@ -465,9 +467,9 @@
    "id": "662afd53-5911-4fbd-b311-f41e95f8ca69",
    "metadata": {},
    "source": [
-    "### Define the extractor\n",
+    "### Define the Extractor\n",
     "\n",
-    "Now we need to define an extractor to run our extraction/preprocessing. We will use a StandardExtractor which has 3 standard preprocessing steps built-in, namely the topic classification, keyword search and named entity recognition. It is possible to disable each of these steps in the StandartExtractor by setting its model to `None`. You can also use a different model instead of the built-in one, by setting its model to a specific HuggingFace model. But here we will use the StandartExtractor as is.\n",
+    "Now we need to define an extractor to run our extraction/preprocessing. We will use a `StandardExtractor` which has 3 standard preprocessing steps built-in, namely the topic classification, keyword search and named entity recognition. It is possible to disable each of these steps in the `StandartExtractor` by setting its model to `None`. You can also use a different model instead of the built-in one, by setting its model to a specific HuggingFace model. But here we will use the `StandartExtractor` as is.\n",
     "\n",
     "For the topic classification model we will use the topics \"urgent\", and \"not urgent\"."
    ]
@@ -497,7 +499,7 @@
    "id": "2ef689bb-fb60-480a-a88c-da6e4913c20c",
    "metadata": {},
    "source": [
-    "We will also need a SourceTableExtractor, which holds information on which data we want to use as a source for our preprocessing, and feed it to the StandardExtractor.\n",
+    "We will also need a `SourceTableExtractor`, which holds information on which data we want to use as a source for our preprocessing, and feed it to the `StandardExtractor`.\n",
     "We give it our schema and view as a data source, and tell it to run the preprocessing on the column `TICKET_DESCRIPTION`, since that is where the Natural Text part of our data is. We also tell it to use the `TICKET_ID` column as an id/key."
    ]
   },
@@ -533,7 +535,7 @@
    "id": "9f9b9526-be69-4bdc-8ee7-51a59eaf7b9e",
    "metadata": {},
    "source": [
-    "Now, we can give these two extractors as steps to a PipelineExtractor, which will build a Pipeline out of them:"
+    "Now, we can give these two extractors as steps to a `PipelineExtractor`, which will build a pipeline out of them which will execute them after each other and feed the output of the first step into the second step:"
    ]
   },
   {
@@ -556,10 +558,9 @@
    "id": "167f25e0-9f57-45ab-8db9-a51c3af75c3c",
    "metadata": {},
    "source": [
-    "Next, we will wrap our PipelineExtractor in an extraction wrapper. This will allow us to simply use our Secret Store `ai_lab_config`\n",
-    "as an input, and build the necessary database connection and \"run\"-function for us.\n",
+    "Next, we will wrap our `PipelineExtractor* in an `Extraction`. This will allow us to configure where the output should be stored, which defaults to use and to run the extractor.\n",
     "\n",
-    "We feed it our PipelineExtractor as the extractor, tell it to put the Output into our schema, and also give it our run defaults."
+    "We feed it our `PipelineExtractor` as the extractor, tell it to put the `Output` into our schema, and also give it our `Defaults`."
    ]
   },
   {
@@ -608,7 +609,7 @@
    "id": "5d9edd47bd725c64",
    "metadata": {},
    "source": [
-    "## Run the preprocessing\n",
+    "## Run the Preprocessing\n",
     "\n",
     "Time to run our preprocessing. First, let's verify how many entries our view has:"
    ]
@@ -633,7 +634,7 @@
    "id": "cc50d285-a323-4de8-937f-2efb1d2e4bf0",
    "metadata": {},
    "source": [
-    "Then we call our preprocessing function. This will use our view as input, and produce new tables and views using the models we downloaded. \n",
+    "Then we call our preprocessing function. This will use our view as input, and produce new tables and views using the models we installed into the Exasol. \n",
     "\n",
     "Also, take note of the time this operation takes on your setup."
    ]
@@ -647,6 +648,14 @@
    "source": [
     "%%time\n",
     "run_text_ai_preprocessing()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af4271c9",
+   "metadata": {},
+   "source": [
+    "**Note**: If the previous operation fails with an error indicating a lost connection, please increase the size of your database and try again. The models are each around 1-2 GB in size and also need that much main memory on each node of your Database."
    ]
   },
   {
@@ -794,8 +803,8 @@
    "id": "2cf7ba49e2779850",
    "metadata": {},
    "source": [
-    "These views contain the results of our three preprocessing steps respectively. They are built on top of the resulting tables, which contain the data in a normalized form. The views denormalize these tables. So, for instance, instead of the topic name you will see a number in the table. The names are collected in a supporting table, named something like XYZ_LOOKUP.\n",
-    "The view will then sort these different tables into human-readable information.\n",
+    "Text AI stores the results of the three preprocessing steps in tables, which contain the data in normalized form. So, for instance, instead of the topic name you will see a number in the table. The names are collected in a supporting table, named something like XYZ_LOOKUP.\n",
+    "For easier usage, Text AI creates views which join the respective tables together to provide human-readable information. Such a view is created for each of the preprocessing steps.\n",
     "\n",
     "The `DOCUMENTS_AI_LAB_TICKETS_SAMPLE_VIEW` is a view on top of our input data, with the addition of the span identifier(`TEXT_DOC_ID`, `TEXT_CHAR_BEGIN`, `TEXT_CHAR_END`) for the text column of each row. This can be used to join the original data with the preprocessing results.\n",
     "\n",
@@ -826,7 +835,8 @@
    "id": "14884ff2-d063-4cce-8c6a-a9a3f5b611bb",
    "metadata": {},
    "source": [
-    "This view contains a span identifying the classified document, the topic it was assigned, as well as a topic score. The latter contains a probability the classifier assigned this topic with regard to this text input. So \"how sure\" the classifier is about the assigned topic.\n",
+    "This view contains the cross product out of Spans (in this case the Span identifies the document) and topics. For each Span-topic pair, it provides the computed `TOPIC_SCORE` between the Span and the topic. The `TOPIC_SCORE` approximates a normalized relevence of the text of the Span with the respective topic.\n",
+    "\n",
     "The value in the `TOPIC_RANK` column ranks the topics for each source document by their `TOPIC_SCORE` value. For our example, we had only two topics, so each document was assigned each of the topics, with different scores. The one with the higher score for a given document will have rank 1, the one with the lower score will have rank 2.\n",
     "\n",
     "There is also a column for error messages encountered during classification, as well as a `SETUP` column documenting which setup(i.e. model, model-settings) where used to obtain this result.\n",
@@ -846,7 +856,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT * FROM \"{{schema}}\".TOPIC_CLASSIFIER_VIEW WHERE TEXT_DOC_ID < 5"
+    "SELECT * FROM \"{{schema}}\".TOPIC_CLASSIFIER_VIEW LIMIT 5"
    ]
   },
   {
@@ -879,7 +889,7 @@
    "id": "62639933-e176-406f-9b9e-4ea3aeea6088",
    "metadata": {},
    "source": [
-    "Similar to the `TOPIC_CLASSIFIER_VIEW`, the `NAMED_ENTITY_VIEW` also has the Span(`TEXT_DOC_ID`, `TEXT_CHAR_BEGIN`, `TEXT_CHAR_END`) identifying the input document the entity was found in. Then there are the found named entities in the `ENTITY` column, as well as an entity type and an entity score. The entity type and entity score are assigned to the entity by the model. Additionally, we also have an identifying span for the entity itself :`ENTITY_DOC_ID`, `ENTITY_CHAR_BEGIN`, `ENTITY_CHAR_END`. This span represents exactly where in our input data this entity was found.\n",
+    "Similar to the `TOPIC_CLASSIFIER_VIEW`, the `NAMED_ENTITY_VIEW` also has the Span(`TEXT_DOC_ID`, `TEXT_CHAR_BEGIN`, `TEXT_CHAR_END`) identifying the input document the entity was found in. Then there are the found named entities in the `ENTITY` column, as well as an `ENTITY_TYPE` and an `ENTITY_SCORE`. The `ENTITY_TYPE` and `ENTITY_SCORE` are assigned to the entity by the model. Additionally, we also have an identifying span for the entity itself: `ENTITY_DOC_ID`, `ENTITY_CHAR_BEGIN`, `ENTITY_CHAR_END`. This span represents exactly where in our input data this entity was found.\n",
     "\n",
     "![a text with an id number. the text containings the named entity subtext \"GoPro Hero\". from the id, subtext begin and subtext end arrows are pointing to the id,begin,end of the entity span.](./images/entity_span.drawio.png)\n",
     "\n",
@@ -895,7 +905,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config SqlMagic.displaylimit = 10 # we set this lower so the show only a preview of the views"
+    "%config SqlMagic.displaylimit = 10 # we set this lower to the show only a preview of the views"
    ]
   },
   {
