--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -64,7 +64,8 @@
     "\n",
     "<b>This operation normally takes a considerable amount of time to complete</b>\n",
     "\n",
-    "When the initialization finishes we should see a printed output suggesting us to activate the language container. Let's take it as an indication of the successful completion of the initialization procedure. The language container activation will be executed at the session level once the connection to the database is established. In tutorials using JupySQL the container activation is included in the routine that enables the JupySQL."
+    "This initialization installs the Text AI SLC and Scripts and the default Hugging Face Transformers models.\n",
+    "The installation of the SLC prints output which suggests to activate the language container. This is only needed, if you want to use the SLC from your SQL Editor. In AI-Lab the language container activation will be executed at the session level once the connection to the database is established. In tutorials using JupySQL the container activation is included in the routine that enables the JupySQL."
    ]
   },
   {
@@ -82,15 +83,9 @@
    },
    "outputs": [],
    "source": [
-    "import subprocess\n",
-    "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension, download_pre_release\n",
+    "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension\n",
     "\n",
-    "with download_pre_release(ai_lab_config) as unzipped_files:\n",
-    "    project_wheel, slc_tar_gz = unzipped_files\n",
-    "\n",
-    "    wheel_path = str(project_wheel)\n",
-    "    !pip install --progress-bar off {wheel_path}\n",
-    "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)\n"
+    "initialize_text_ai_extension(ai_lab_config)"
    ]
   }
  ],
