Applying changes from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
@@ -835,7 +835,7 @@
    "id": "14884ff2-d063-4cce-8c6a-a9a3f5b611bb",
    "metadata": {},
    "source": [
-    "This view contains the cross product out of Spans (in this case the Span identifies the document) and topics. For each Span-topic pair, it provides the computed `TOPIC_SCORE` between the Span and the topic. The `TOPIC_SCORE` approximates a normalized relevence of the text of the Span with the respective topic.\n",
+    "This view contains the cross product of the input text and the topics. For each text-topic pair, it provides the computed `TOPIC_SCORE` between the text and the topic. The `TOPIC_SCORE` approximates a normalized relevance of the text with the topic.\n",
     "\n",
     "The value in the `TOPIC_RANK` column ranks the topics for each source document by their `TOPIC_SCORE` value. For our example, we had only two topics, so each document was assigned each of the topics, with different scores. The one with the higher score for a given document will have rank 1, the one with the lower score will have rank 2.\n",
     "\n",
@@ -1003,7 +1003,7 @@
     "![A diagramm showing multiple Table names with their respective columns. Starting at \"DOCUMENTS\" and then the three result views. The columns containg the text document span are highlighted.](./images/data_model_2.drawio.png)\n",
     "\n",
     "\n",
-    "## Adding data to source view\n",
+    "## Adding Data to Source View\n",
     "\n",
     "Now, let's try and run the preprocessing again, using the exact same input."
    ]
