Use notebook-connector Extraction, cleaned imports and removed notebooks for ExtractionWrapper and default models

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
@@ -107,12 +107,7 @@
    "id": "3fb31166fdb6b628",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
-    "from exasol.nb_connector.language_container_activation import get_activation_sql\n",
-    "\n",
-    "activation_sql = get_activation_sql(ai_lab_config)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -121,15 +116,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.nb_connector.ai_lab_config import AILabConfig\n",
-    "\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
+    "from exasol.nb_connector.text_ai_extension_wrapper import Extraction\n",
     "from exasol.ai.text.extraction.abstract_extraction import Defaults, Output\n",
     "from exasol.ai.text.extractors.standard_extractor import StandardExtractor\n",
     "from exasol.ai.text.extractors.extractor import PipelineExtractor\n",
-    "from exasol.ai.text.extractors.source_table_extractor import SourceTableExtractor, SchemaSource, TableSource, NameSelector\n",
-    "from exasol.ai.text.extractors.bucketfs_model_repository import BucketFSRepository\n",
-    "\n",
-    "from exasol.nb_connector.text_ai_extension_wrapper import LANGUAGE_ALIAS"
+    "from exasol.ai.text.extractors.source_table_extractor import SourceTableExtractor, SchemaSource, TableSource, NameSelector"
    ]
   },
   {
@@ -454,11 +446,7 @@
    "source": [
     "defaults = Defaults(\n",
     "    parallelism_per_node=1,\n",
-    "    batch_size=10,\n",
-    "    model_repository=BucketFSRepository(\n",
-    "        connection_name = ai_lab_config.txaie_bfs_connection,\n",
-    "        sub_dir = ai_lab_config.txaie_models_bfs_dir\n",
-    "    )\n",
+    "    batch_size=10\n",
     ")"
    ]
   },
@@ -565,24 +553,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "46dddab3fc181d5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run ./utils/txaie_extraction_wrapper.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 61,
    "id": "f9ebd37ab1ed766",
    "metadata": {},
    "outputs": [],
    "source": [
-    "extraction = ExtractionWrapper(extractor=p_extractor,\n",
-    "                               output=Output(db_schema=schema),\n",
-    "                               defaults=defaults)"
+    "extraction = Extraction(extractor=p_extractor,\n",
+    "                        output=Output(db_schema=schema),\n",
+    "                        defaults=defaults)"
    ]
   },
   {
