Applied changes from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -11,11 +11,11 @@
     "\n",
     "## Prerequisites\n",
     "\n",
-    "**Note**: To be able to store and the run the models used in this demo, your database need fullfil the following prerequisites:\n",
+    "**Note**: To be able to store and run the models used in this demo, your database should meet the following requirements:\n",
     "\n",
     "* The database has at least 10 GB free disk space for the BucketFS. In case you are using the Exasol Docker-DB, your Docker host needs at least 10 GB free disk space.\n",
     "* The database is configured with at least 8 GB RAM. In case you are using the Exasol Docker-DB, please configure the Exasol Docker-DB accordingly in the AI-Lab Main Configuration and restart the Docker-DB if needed. \n",
-    "    * **Caution**: Restarting the Docker-DB will wipe the content of the database.\n",
+    "    * **Caution**: Restarting the Docker-DB will wipe out the content of the database.\n",
     "\n",
     "Prior to using this notebook one needs to complete the following steps:\n",
     "1. [Configure the AI-Lab](../../main_config.ipynb).\n",
@@ -64,8 +64,8 @@
     "\n",
     "<b>This operation normally takes a considerable amount of time to complete</b>\n",
     "\n",
-    "This initialization installs the Text AI SLC and Scripts and the default Hugging Face Transformers models.\n",
-    "The installation of the SLC prints output which suggests to activate the language container. This is only needed, if you want to use the SLC from your SQL Editor. In AI-Lab the language container activation will be executed at the session level once the connection to the database is established. In tutorials using JupySQL the container activation is included in the routine that enables the JupySQL."
+    "This notebook installs the Text AI SLC and Scripts and the default Hugging Face Transformers models.\n",
+    "The installation of the SLC prints output which suggests to activate the language container. This is not needed in AI-Lab, because the language container activation will be executed at the session level once the connection to the database is established. In tutorials using JupySQL the container activation is included in the routine that enables the JupySQL."
    ]
   },
   {
