--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
@@ -26,7 +26,7 @@
    "id": "c624589a-697a-4ba0-a9bb-1439bc52c464",
    "metadata": {},
    "source": [
-    "## Natural Language Processing introduction\n",
+    "## Natural Language Processing Introduction\n",
     "\n",
     "This section contains a short introduction to Natural Language Processing, and the precesses we will use in this notebook.\n",
     "\n",
@@ -43,11 +43,11 @@
     "                                                                                                                     \n",
     "### Topic Classification\n",
     "                                                                                                                     \n",
-    "Topic Classification is the task of assigning topics to text/documents/datapoints. In Topic Classification, a given set of topics is used, and each data point is assigned a probability and rank for each of the topics. These probabilities (called \"scores\") and ranks can then be used to select the best matching topic for each data point.\n",
+    "Topic Classification is the task of assigning topics to text/documents/datapoints. In Topic Classification, a given set of topics is used, and each data point is assigned a relevance score and rank for each of the topics. These relevance scores and ranks can then be used to select the best matching topic for each data point.\n",
     "Given that a document is about a particular topic, particular words are expected to appear in the document more or less frequently. However, it is not required for the exact words to describe the topic to be found in a text. This means that topics can be inferred, even if their name/description/topic synonyms are not found in the data.\n",
     "\n",
     "![diagramm a document text added topics](./images/topics.drawio.png)                                                                                                             \n",
-    "Topic Classification works with a given set of these topics as input, given each a probability of the text being about this topic. It is usually trained using supervised learning. It can also be used with Zero-Shot Classification models, which can assign classes/topics which have not been seen during the training. This is opposed to other approaches like topic extraction, which is often unsupervised and does not need a list of topics as input, instead extracting them from the data itself.\n",
+    "Topic Classification works with a given set of these topics as input and assigns to each a relevance score that the text being about this topic. It is usually trained using supervised learning. It can also be used with Zero-Shot Classification models, which can assign classes/topics which have not been seen during the training. This is opposed to other approaches like topic extraction, which is often unsupervised and does not need a list of topics as input, instead extracting them from the data itself.\n",
     "                                                                                                                     \n",
     "### Keyword Search\n",
     "                                                                               \n",
@@ -68,6 +68,14 @@
     "\n",
     "![diagramm showing document text with found entity and keyword and topic](./images/document_annotated.drawio.png)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed253c4f",
+   "metadata": {},
+   "source": [
+    "You can verify if the dataset is already available with the query below. It should return `3606`."
    ]
   },
   {
@@ -100,14 +108,6 @@
     "\n",
     "We also want to import some of the Python functions of the Text AI and Notebook Connector modules."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "3fb31166fdb6b628",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1133,16 +1133,6 @@
     "    \"\"\")\n",
     "    with option_context('display.max_rows', 20, 'display.max_colwidth', 1000):\n",
     "        display(audit_log)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f38ab5f2-37e4-4a90-b238-b6804b42d66b",
-   "metadata": {},
-   "source": [
-    "## Addendum\n",
-    "\n",
-    "Consider also, the free text in a dataset may contain spelling errors, incomplete mentions or other quality issues. Therefore, it might need further processing steps to be at its most useful. However, we will not be demonstrating those here."
    ]
   }
  ],
