Connected text ai notebooks

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
@@ -5,9 +5,9 @@
    "id": "d89333d8-58be-4d52-a483-510b6fd30920",
    "metadata": {},
    "source": [
-    "# Text AI Extension initialization\n",
+    "# Text AI Extension Initialization\n",
     "\n",
-    "Here we will bring the Text AI Extension functionality up and running. We will do this via a single call to function in the support library.\n",
+    "Here we will bring the Text AI functionality up and running. We will do this via a single call to function in the support library.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -64,6 +64,14 @@
     "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension\n",
     "\n",
     "initialize_text_ai_extension(ai_lab_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d8aedb",
+   "metadata": {},
+   "source": [
+    "You can now continue with the [Text AI Preprocessing Notebook](txaie_preprocessing.ipynb)."
    ]
   }
  ],
