--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -1134,6 +1134,14 @@
     "    with option_context('display.max_rows', 20, 'display.max_colwidth', 1000):\n",
     "        display(audit_log)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c57149",
+   "metadata": {},
+   "source": [
+    "You can now continue with the [Text AI Analytics Notebook](txaie_analytics.ipynb)."
+   ]
   }
  ],
  "metadata": {
