#363: Added Text AI Preprocessing Notebook (#364)
* Updated git and gpg-agent dependencies
* Added Customer Support Ticket dataset loading notebook
* Set permissions for /home dir in notebook-tests to 777
* Fix slow dependency resolution in ec2 instance by adding the dependency resolution of poetry in notebook-connector

---------

Co-authored-by: Torsten Kilias <torsten.kilias@exasol.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -11,6 +11,12 @@
     "\n",
     "## Prerequisites\n",
     "\n",
+    "**Note**: To be able to store and run the models used in this demo, your database should meet the following requirements:\n",
+    "\n",
+    "* The database has at least 10 GB free disk space for the BucketFS. In case you are using the Exasol Docker-DB, your Docker host needs at least 10 GB free disk space.\n",
+    "* The database is configured with at least 8 GB RAM. In case you are using the Exasol Docker-DB, please configure the Exasol Docker-DB accordingly in the AI-Lab Main Configuration and restart the Docker-DB if needed. \n",
+    "    * **Caution**: Restarting the Docker-DB will wipe out the content of the database.\n",
+    "\n",
     "Prior to using this notebook one needs to complete the following steps:\n",
     "1. [Configure the AI-Lab](../../main_config.ipynb).\n",
     "\n",
@@ -54,11 +60,12 @@
    "id": "5e7893b2-a99c-477c-bade-e15b3af1aa25",
    "metadata": {},
    "source": [
-    "## Initialize the extension\n",
+    "## Initialize the Extension\n",
     "\n",
     "<b>This operation normally takes a considerable amount of time to complete</b>\n",
     "\n",
-    "When the initialization finishes we should see a printed output suggesting us to activate the language container. Let's take it as an indication of the successful completion of the initialization procedure. The language container activation will be executed at the session level once the connection to the database is established. In tutorials using JupySQL the container activation is included in the routine that enables the JupySQL."
+    "This notebook installs the Text AI SLC and Scripts and the default Hugging Face Transformers models.\n",
+    "The installation of the SLC prints output which suggests to activate the language container. This is not needed in AI-Lab, because the language container activation will be executed at the session level once the connection to the database is established. In tutorials using JupySQL the container activation is included in the routine that enables the JupySQL."
    ]
   },
   {
@@ -76,16 +83,9 @@
    },
    "outputs": [],
    "source": [
-    "import subprocess\n",
-    "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension, download_pre_release\n",
+    "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension\n",
     "\n",
-    "with download_pre_release(ai_lab_config) as unzipped_files:\n",
-    "    project_wheel, slc_tar_gz = unzipped_files\n",
-    "\n",
-    "    pip_cmd = ['pip', 'install', str(project_wheel)]\n",
-    "    subprocess.run(pip_cmd, check=True, capture_output=True)\n",
-    "\n",
-    "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)"
+    "initialize_text_ai_extension(ai_lab_config)"
    ]
   }
  ],
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
