--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/utils/txaie_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/utils/txaie_init_ui.ipynb
@@ -48,6 +48,21 @@
     "\n",
     "    return get_generic_config_ui(conf, [inputs], ['Pre-release Access'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "305db4e6-c629-405b-97ae-b733cc1c00ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_txaie_SLC_name_ui(conf: Secrets) -> widgets.Widget:\n",
+    "    inputs = [\n",
+    "        ('Language Alias', widgets.Text(value=conf.get(CKey.language_alias)), CKey.language_alias),\n",
+    "    ]\n",
+    "\n",
+    "    return get_generic_config_ui(conf, [inputs], ['Language Alias'])"
+   ]
   }
  ],
  "metadata": {
@@ -66,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
